Bug 968196 - Use GDK error handler for X window error events. r=karlt