toolkit/xre/nsGDKErrorHandler.h
@@ -3,10 +3,6 @@
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
-#ifdef MOZ_X11
-#include <X11/Xlib.h>
-#if (MOZ_WIDGET_GTK == 2)
-void InstallX11ErrorHandler();
-#endif
-extern "C" int X11Error(Display *display, XErrorEvent *event);
+#if (MOZ_WIDGET_GTK == 3)
+void InstallGdkErrorHandler();
 #endif
